crates/uitest/fixtures/ty/trait_impl/impl_method_label_mismatch.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/trait_impl/impl_method_label_mismatch.fe
---
error[6-0006]: method argument label mismatch
  ┌─ impl_method_label_mismatch.fe:6:18
  │
2 │     fn foo(self, x y: i32, _: u32, z: u32) 
  │                  -------- argument label defined here
  ·
6 │     fn foo(self, y: i32, x: u32, _: u32) {}
  │                  ^^^^^^ expected `x` label, but the given label is `y`

error[6-0006]: method argument label mismatch
  ┌─ impl_method_label_mismatch.fe:6:26
  │
2 │     fn foo(self, x y: i32, _: u32, z: u32) 
  │                            ------ argument label defined here
  ·
6 │     fn foo(self, y: i32, x: u32, _: u32) {}
  │                          ^^^^^^ expected `_` label, but the given label is `x`

error[6-0006]: method argument label mismatch
  ┌─ impl_method_label_mismatch.fe:6:34
  │
2 │     fn foo(self, x y: i32, _: u32, z: u32) 
  │                                    ------ argument label defined here
  ·
6 │     fn foo(self, y: i32, x: u32, _: u32) {}
  │                                  ^^^^^^ expected `z` label, but the given label is `_`
